--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -1,8 +1,8 @@
 .container{
-    max-width: 120rem;
-    margin: 2rem;
+    //max-width: 120rem;   
     background-color: #fff;
     box-shadow: var(--shadow-dark);
     min-height: 40rem;
+
     
 }
