--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,8 +1,34 @@
 :root{
 
+    // COLOR PALETTE
     --color-primary: #75cac3;
     --color-primary-light: #d7f7f5;
     --color-primary-dark: #2a6171;
+    
+    --color-blue-dark: #194cfa;
+    --color-blue-dark-rgb:25, 76, 250;
+    --color-blue-light: #799bee;
+    --color-blue-light-rgb: 121, 155, 238;
+
+    
+    --color-grey-dark:#2c2e2f;
+    --color-grey-dark-rgb:44, 46, 47;
+    --color-grey-med: #666666;
+    --color-grey-med-rgb: 102, 102, 102;
+    --color-grey-light: #aaabaa;
+    --color-grey-light-rgb: 170, 171, 170;
+    
+
+    //
+    // FONTS
+    --font-size-small: 1rem;
+    --font-size-std: 1.6rem;
+    --font-size-big: 2.6rem;
+    --font-size-very-big: 3.6rem;
+    --font-size-huge: 5.6rem;
+
+    
+
 
     --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
 }
@@ -27,8 +53,5 @@ body{
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     line-height: 1.6;
-    background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-primary-dark));
-    background-size: cover;
-    background-repeat: no-repeat;
     min-height: 100vh;
 }
