--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,6 +10,13 @@
     --color-blue-light: #799bee;
     --color-blue-light-rgb: 121, 155, 238;
 
+    --color-green-dark: #018C58;
+    --color-green-dark-rgb: 1, 140, 88;
+    --color-green-light: #01b975;
+    --color-green-light-rgb: 1, 185, 117;
+    
+   
+
     
     --color-grey-dark:#2c2e2f;
     --color-grey-dark-rgb:44, 46, 47;
