section about description and video

--- a/css/style.css
+++ b/css/style.css
@@ -15,28 +15,23 @@ $breakpoint argument choices
 
 */
 :root {
-  --color-primary: #75cac3;
-  --color-primary-light: #d7f7f5;
-  --color-primary-dark: #2a6171;
-  --color-blue-dark: #194cfa;
-  --color-blue-dark-rgb:25, 76, 250;
-  --color-blue-light: #799bee;
-  --color-blue-light-rgb: 121, 155, 238;
   --color-green-dark: #018C58;
   --color-green-dark-rgb: 1, 140, 88;
   --color-green-light: #01b975;
   --color-green-light-rgb: 1, 185, 117;
-  --color-grey-dark:#2c2e2f;
-  --color-grey-dark-rgb:44, 46, 47;
+  --color-green: #38C479;
+  --color-green-rgb: 56, 196, 121;
+  --color-grey-dark:rgba(0, 0, 0, 0);
+  --color-grey-dark-rgb: 0, 0, 0;
   --color-grey-med: #666666;
-  --color-grey-med-rgb: 102, 102, 102;
-  --color-grey-light: #aaabaa;
-  --color-grey-light-rgb: 170, 171, 170;
-  --font-size-small: 1rem;
-  --font-size-std: 1.6rem;
-  --font-size-big: 2.6rem;
-  --font-size-very-big: 3.6rem;
-  --font-size-huge: 5.6rem;
+  --color-grey-light:#efefef;
+  --color-blue-dark: #194cfa;
+  --color-blue-light: #799bee;
+  /*************************
+    * FONTS
+    *************************/
+  --font-primary: 'Lato', sans-serif;
+  --font-secondary: 'Montserrat', sans-serif;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3); }
 
 * {
@@ -53,43 +48,113 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
+  font-family: var(--font-primary);
   line-height: 1.6;
-  min-height: 100vh; }
+  min-height: 100vh;
+  background-color: var(--color-grey-light); }
 
 .container {
-  background-color: #fff;
-  box-shadow: var(--shadow-dark);
   min-height: 40rem; }
 
 .header {
-  position: relative; }
+  position: relative;
+  color: #fff; }
   .header__image {
-    background-size: repeat;
-    height: 45vh;
-    background-position: top;
-    background-image: linear-gradient(to right bottom, rgba(var(--color-green-light-rgb), 0.8) 0%, rgba(var(--color-green-dark-rgb), 0.85) 100%, transparent 50%), url(../../img/Endless-Constellation.svg);
-    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 100%, 0% 75%);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 100%, 0% 75%);
-    opacity: .95; }
+    height: 40vh;
+    background-image: linear-gradient(to top left, rgba(var(--color-grey-dark-rgb), 0.1) 0%, rgba(var(--color-grey-dark-rgb), 0.8) 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 50% 100%, 0% 90%);
+    opacity: 1; }
   .header__text-box {
-    display: flex;
     height: inherit;
+    display: flex;
     justify-content: center;
-    align-items: center;
-    font-size: var(--font-size-huge);
-    padding-bottom: 3rem; }
+    align-items: center; }
   .header__text {
-    display: flex; }
-    .header__text--name {
-      color: red; }
-    .header__text--symbol {
-      color: white; }
-    .header__text--surname {
-      color: purple; }
+    font-weight: 300;
+    text-transform: uppercase;
+    font-size: 3rem;
+    letter-spacing: .5rem;
+    animation: moveInLeft 3s; }
+
+/********************
+******   VIDEO ******
+********************/
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-15rem); }
+  75% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+/********************
+****** PROFILE ******
+********************/
+.profile {
+  z-index: 1;
+  display: flex;
+  justify-content: space-around; }
+  .profile__box {
+    width: 33.33%;
+    margin: 2.5rem;
+    padding: 2rem 0;
+    padding-left: 2rem;
+    color: var(--color-grey-light);
+    font-family: var(--font-secondary); }
+    .profile__box-left {
+      letter-spacing: .5px;
+      word-spacing: .9px; }
+    .profile__box-right {
+      opacity: 0; }
+  .profile__title {
+    font-size: 2.2rem;
+    font-weight: 400;
+    margin-bottom: 1.2rem; }
+  .profile__description {
+    font-size: 1.2rem;
+    font-weight: 300; }
+
+.skills {
+  height: inherit;
+  background-color: rgba(var(--color-green-rgb), 1);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 93%, 0% 100%);
+  background-image: linear-gradient(175deg, rgba(var(--color-green-dark-rgb), 0.7) 0%, rgba(var(--color-green-dark-rgb), 0.1) 50%, transparent 50%); }
+  .skills__box {
+    margin-top: 2rem;
+    padding: 3rem 15rem; }
+    .skills__box-professional {
+      height: 50%; }
+    .skills__box-technical {
+      height: 50%; }
+
+.navigation {
+  width: 100%;
+  height: 5rem;
+  background-color: transparent;
+  position: fixed;
+  z-index: 10; }
+
+.section {
+  height: 100vh; }
 
 .section-about {
   display: flex;
   flex-direction: column;
-  height: 100vh; }
+  position: relative; }
+
+.section-skills {
+  display: flex;
+  flex-direction: column; }
