--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,5 +4,8 @@
 @import "base/layout";
 
 @import "components/header";
+@import "components/skills";
+@import "components/navigation";
+
 
 @import "pages/home";
