--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,65 +1,113 @@
 .header{
     position: relative;
+    color: #fff;
+    
     
     &__image{
-        background-size: repeat;
-        height: 45vh;
-        //background-blend-mode: overlay;
-        background-position: top;
-        background-image: 
-        linear-gradient(to right bottom,
-        rgba(var(--color-green-light-rgb), .8) 0%,        
-        rgba(var(--color-green-dark-rgb), .85) 100%,         
-        transparent 50%),
-        url(../../img/Endless-Constellation.svg);
-        //clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 75% 85%, 65% 100%, 60% 85%, 0% 85%);                              
-        -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%,50% 100% ,0% 75%);                              
-                clip-path: polygon(0% 0%, 100% 0%, 100% 75%,50% 100% ,0% 75%);    
-        opacity: .95; 
-        // background-image: linear-gradient(to right bottom,
-        //                   rgba(var(--color-grey-dark-rgb),.5) 0%,
-        //                   rgba(var(--color-grey-light-rgb),.3) 100%,         
-        //                   transparent 45%),
-        //                   url(../../img/binary.jpg);
-        //                   //clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 75% 85%, 65% 100%, 60% 85%, 0% 85%);                              
-        //           -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 85% 100%, 0% 100%);                              
-        //                   clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 85% 100%, 0% 100%);                              
-      
-        
+        height: 40vh;
+        background-image: linear-gradient(to top left,
+        rgba(var(--color-grey-dark-rgb), .1) 0%,         
+        rgba(var(--color-grey-dark-rgb), .8) 100%);
+        clip-path: polygon(0% 0%, 100% 0%, 100% 90%,50% 100% ,0% 90%);    
+        opacity: 1;  
     }
     
     &__text-box{
-        //@include center-absolute;
-
-        display: flex;
         height: inherit;
+        display: flex;
         justify-content: center;
-        align-items: center; 
-        font-size: var(--font-size-huge);
-        padding-bottom: 3rem;
+        align-items: center;
+
         
     }
 
     &__text{
-        display: flex;
+        font-weight: 300;
+        text-transform: uppercase;
+        font-size: 3rem;
+        letter-spacing: .5rem;
+        animation: moveInLeft 3s;
+    }    
+
+}
+/********************
+******   VIDEO ******
+********************/
+.bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    
+    &__content{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;// fill the entire parent element mantaing the aspect ratio of the video/image
+
+    }
+}
+
+@keyframes moveInLeft{
+    0%{
+        opacity: 0;
+        transform: translateX(-15rem);
+    }
+    75%{
+        transform: translateX(1rem);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+/********************
+****** PROFILE ******
+********************/
+.profile{    
+    z-index: 1;
+    display: flex;
+    justify-content: space-around;
+    // align-items: center;
+    
+    
+
+    &__box{
+        width: 33.33%;
+        margin: 2.5rem;
+        padding: 2rem 0;
+        padding-left: 2rem;
+        color: var(--color-grey-light);
+        font-family: var(--font-secondary);
+      //  background-color: orangered;
+        
+        
+        
+        &-left{
+            letter-spacing: .5px;
+            word-spacing: .9px;
+        }
+        &-right{
+            //display: none;
+            opacity: 0;
+        }
         
 
-        &--name{
-            color: red;
-            
-            
-        }
-
-        &--symbol{
-            color: white;
-            
-        }
-
-        &--surname{
-            color: purple;
-        }
     }
 
+    &__title{
+        font-size: 2.2rem;
+        font-weight: 400;
+        margin-bottom: 1.2rem;
+                
+    }
     
-    
+    &__description{
+        font-size: 1.2rem;
+        font-weight: 300;
+       
+    }
+
+
 }
