new website new setup

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,1 @@
-@import "abstract/mixins";
-
-@import "base/base";
-@import "base/layout";
-
-@import "components/header";
-@import "components/skills";
-@import "components/navigation";
-
-
-@import "pages/home";
+// e.g. @import "pages/home";
