--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,16 @@
-// e.g. @import "pages/home";
+
+@import 'base';
+
+@import 'about';
+
+@import 'footer';
+
+@import 'header';
+
+@import 'navigation';
+
+@import 'projects';
+
+@import 'skills';
+
+@import 'typography';
