--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    background-color: green;
+    background-color: $color-quinacridone-magenta;
     grid-row: 1/2;
     grid-column: full-start/full-end;
 }
