--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,17 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-  font-family: "Ubuntu", sans-serif;
-  color: #9DE7E4; }
+  font-family: "Ubuntu", sans-serif; }
 
 ::selection {
-  background-color: #F17105;
+  background-color: #F58B00;
   color: #FFFFFF; }
 
 body {
   font-weight: 400;
   line-height: 1.6;
-  letter-spacing: 1.5px; }
+  letter-spacing: 1.5px;
+  color: #ECECEB; }
 
 .main__container {
   display: grid;
@@ -30,18 +30,38 @@ body {
   cursor: pointer; }
 
 .about {
-  background-color: red;
+  background-color: #103F56;
   grid-row: 3/4;
   grid-column: full-start/full-end; }
 
 .footer {
+  display: none;
   background-color: #144B66;
   grid-row: 6/7;
   grid-column: full-start/full-end;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 2rem 5%; }
+  align-items: center; }
+  .footer__form {
+    padding: 2.5rem 0; }
+    .footer__form--title {
+      color: #ECECEB;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 400;
+      font-size: 2.6rem;
+      text-align: center;
+      text-transform: uppercase;
+      margin-bottom: 3rem;
+      position: relative; }
+      .footer__form--title::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1.5px;
+        background: #ECECEB;
+        transform: scaleX(0.6); }
   .footer__form-box {
     border: 2px solid rgba(23, 86, 118, 0.4);
     border-radius: 3px;
@@ -50,31 +70,30 @@ body {
     justify-content: center;
     flex-direction: column;
     box-shadow: -7px 7px 1.5rem rgba(0, 0, 0, 0.7);
-    padding: 2rem 3%;
-    padding-top: 2.5rem; }
+    padding: 2rem 8%;
+    width: 100%; }
   .footer__group {
     margin: .5rem 0; }
     .footer__group--4 {
-      display: flex;
-      justify-content: center;
-      padding-top: 1.3rem; }
-  .footer__input {
+      margin-top: 1.5rem;
+      margin-left: auto; }
+  .footer__input, .footer__input:active, .footer__input:link {
     color: inherit;
     background-color: rgba(58, 207, 202, 0.1);
     border: none;
     border-radius: 3px 3px 0px 0px;
-    padding: .8rem;
+    padding: .7rem;
     width: 100%;
     display: block;
     border-bottom: 3px solid transparent; }
-    .footer__input::placeholder {
+    .footer__input::placeholder, .footer__input:active::placeholder, .footer__input:link::placeholder {
       color: rgba(58, 207, 202, 0.5); }
-    .footer__input:focus {
+    .footer__input:focus, .footer__input:active:focus, .footer__input:link:focus {
       outline: none;
       box-shadow: -0.3rem 0.3rem 0.8rem rgba(0, 0, 0, 0.4);
       color: #3acfca;
       border-bottom: 3px solid #9DE7E4; }
-    .footer__input:focus:invalid {
+    .footer__input:focus:invalid, .footer__input:active:focus:invalid, .footer__input:link:focus:invalid {
       border-bottom: 3px solid #FB3640; }
   .footer__label {
     display: block;
@@ -87,26 +106,31 @@ body {
     visibility: hidden;
     transform: translate(0.9rem, -2.8rem); }
   .footer textarea {
-    min-width: 20rem;
+    width: 100%;
     min-height: 6.43rem;
     max-height: 12rem; }
-  .footer__btn-form {
+  .footer__btn-form, .footer__btn-form:link, .footer__btn-form:active {
     background-color: transparent;
     border: 1.5px solid rgba(157, 231, 228, 0.2);
-    transition: all .3s; }
-    .footer__btn-form:hover {
+    transition: all .3s;
+    color: #ECECEB; }
+    .footer__btn-form:hover, .footer__btn-form:link:hover, .footer__btn-form:active:hover {
       background-color: rgba(157, 231, 228, 0.3);
       border: 1.5px solid rgba(157, 231, 228, 0.6);
       transform: scale(1.1); }
-    .footer__btn-form:active {
+    .footer__btn-form:active, .footer__btn-form:link:active, .footer__btn-form:active:active {
       background: rgba(251, 54, 64, 0.7);
       outline: none; }
+  .footer__social {
+    background-color: #103F56;
+    width: 100%;
+    padding: 1.5%; }
   .footer__icon-box {
-    padding: .5rem;
-    margin-top: 2.5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
+    .footer__icon-box--link {
+      color: transparent; }
     .footer__icon-box--item {
       fill: rgba(58, 207, 202, 0.7);
       height: 3.7rem;
@@ -124,21 +148,115 @@ body {
     color: #ECECEB; }
 
 .header {
-  background-color: green;
+  background-color: #8F2D56;
   grid-row: 1/2;
   grid-column: full-start/full-end; }
 
 .navigation {
-  background-color: #3c8cff;
+  background-color: #4B13A4;
   grid-row: 2/3;
   grid-column: full-start/full-end; }
 
 .projects {
-  background-color: blue;
+  background-color: #3C438D;
   grid-row: 4/5;
   grid-column: full-start/full-end; }
 
 .skills {
-  background-color: orange;
   grid-row: 5/6;
-  grid-column: center-start/center-end; }
+  grid-column: center-start/center-end;
+  padding: 5rem 0;
+  color: #29282A; }
+  .skills__box {
+    display: grid;
+    grid-template-columns: repeat(6, minmax(fit-content, 1fr));
+    grid-template-rows: repeat(2, min-content);
+    column-gap: 1rem;
+    border: 1px solid rgba(157, 231, 228, 0.8);
+    border-radius: 7px;
+    overflow: hidden; }
+  .skills__content {
+    grid-row: 1/2;
+    grid-column: 1/-1;
+    display: flex;
+    flex-wrap: wrap; }
+  .skills__card {
+    flex: 1 0 200px;
+    padding: 4rem 1rem;
+    flex-wrap: wrap;
+    border-right: 1px solid rgba(157, 231, 228, 0.3); }
+    .skills__card__header {
+      display: flex;
+      align-items: center;
+      justify-content: left;
+      flex-direction: column; }
+    .skills__card__icon {
+      fill: rgba(245, 139, 0, 0.8);
+      height: 3.5rem;
+      width: 3.5rem;
+      margin-bottom: 1rem; }
+    .skills__card__title {
+      color: rgba(112, 112, 112, 0.9);
+      font-weight: 600;
+      font-size: 1.6rem;
+      text-transform: uppercase;
+      text-align: center; }
+    .skills__card__list {
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 1rem; }
+      .skills__card__list li {
+        flex: 1 1 100%;
+        margin-top: .5rem 0;
+        font-family: "Montserrat", sans-serif;
+        font-size: 1.3rem;
+        text-transform: capitalize;
+        font-weight: 300;
+        text-align: center; }
+  .skills__carousel {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative; }
+    .skills__carousel::before, .skills__carousel::after {
+      content: "";
+      height: 100%;
+      width: 100px;
+      position: absolute;
+      background: linear-gradient(to right, #ffffff 0%, rgba(255, 255, 255, 0.2) 100%);
+      z-index: 5; }
+    .skills__carousel::before {
+      top: 0;
+      left: 0; }
+    .skills__carousel::after {
+      top: 0;
+      right: 0;
+      transform: rotateZ(180deg); }
+    .skills__carousel .slider {
+      width: 100rem;
+      height: 100px;
+      background: white;
+      display: flex; }
+    .skills__carousel .slide {
+      height: 100px;
+      display: flex;
+      align-items: center;
+      animation: slide-me 30s linear infinite; }
+      .skills__carousel .slide__icon {
+        fill: rgba(157, 231, 228, 0.8);
+        height: 3rem;
+        width: 3rem;
+        margin-right: 6rem;
+        cursor: pointer; }
+        .skills__carousel .slide__icon:hover {
+          fill: rgba(245, 139, 0, 0.7); }
+
+@keyframes slide-me {
+  0% {
+    transform: translate(0, 0); }
+  100% {
+    transform: translate(-100%, 0); } }
