--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,5 @@
 .footer{
+    display: none;
     background-color: $color-indigo-dye;
     grid-row: 6/7;
     grid-column: full-start/full-end;
@@ -7,39 +8,70 @@
     flex-direction: column;
     align-items: center;
     // justify-content: center;
-    padding: 2rem 5%;
+    
+
+    &__form{
+        padding: 2.5rem 0;
+
+        &--title{
+            color: $color-platinium;
+            font-family: $font-tertiary;
+            font-weight: 400;
+            font-size: $font-big;
+            text-align: center;
+            text-transform: uppercase;
+            margin-bottom: 3rem;
+            position: relative;
+            
+
+            &::after{
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 1.5px;
+                background: $color-platinium;
+                transform: scaleX(.6);
+
+
+                
+            }
+        }
+        
+    }
 
     &__form-box{
         border: 2px solid rgba($color-blue-sapphire, .4);
-        border-radius: 3px;
-        
+        border-radius: 3px;        
         display: flex;
         align-content: center;
         justify-content: center;
         flex-direction: column;
         box-shadow: -7px 7px 1.5rem rgba(#000000, .7); 
-        padding:  2rem 3%;
-        padding-top: 2.5rem;
+        padding:  2rem 8%;
+        width: 100%;
     }
 
     &__group{
         margin: .5rem 0;
 
         &--4{
-            display: flex;
-            justify-content: center;
-            padding-top: 1.3rem;
+            margin-top: 1.5rem;
+            margin-left: auto;
         }
         
     }  
         
    
-    &__input{
+    &__input,
+    &__input:active,
+    &__input:link{
         color: inherit;
         background-color: rgba($color-medium-turquoise, .1);
         border: none;
         border-radius: 3px 3px 0px 0px;
-        padding: .8rem;
+        padding: .7rem;
         width: 100%;
         display: block;     
         border-bottom: 3px solid transparent;
@@ -70,28 +102,30 @@
         transition: all .4s;
         transform: translate(.9rem, -4.5em);
         font-size: 1.2rem;
-        font-weight: 600;
-        
-        
+        font-weight: 600;   
     }
 
     &__input:placeholder-shown ~ &__label {
+        
         opacity: 0;// animation doesn not work without opacity
         visibility: hidden;
         transform: translate(.9rem, -2.8rem);
     }
 
     textarea{
-        min-width: 20rem;
+        width: 100%;
         min-height: 6.43rem;
         max-height: 12rem;
 
     }
 
-    &__btn-form{        
+    &__btn-form,
+    &__btn-form:link,
+    &__btn-form:active{        
         background-color: transparent;
         border: 1.5px solid rgba($color-celeste, .2);
         transition: all .3s;
+        color: $color-platinium;
         
         &:hover{
             background-color: rgba($color-celeste, .3);
@@ -106,19 +140,23 @@
       
     }
    
-
+    &__social{
+        background-color: $color-indigo-dye-dark;
+        width: 100%;
+        padding: 1.5%;
+        
+    }
 
 
     
-    &__icon-box{
-        padding: .5rem;
-        margin-top: 2.5rem;
-        
+    &__icon-box{              
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
 
-        
+        &--link{
+            color: transparent;
+        }
         &--item{
             fill: rgba($color-medium-turquoise, .7);
             height: 3.7rem;
@@ -130,9 +168,7 @@
             &:hover{
                 fill: $color-platinium;
                 transform: translate(3px, -2px) scale(1.2);
-            }
-
-           
+            }           
         }
 
     }
