--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,7 +1,8 @@
 .projects{
-    background-color: blue;
+    background-color: $color-dark-slate-blue;
     grid-row: 4/5;
     grid-column: full-start/full-end;    
+    // height: 10rem;
 
 
 }
