--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,5 +1,147 @@
 .skills{
-    background-color: orange;
     grid-row: 5/6;
     grid-column: center-start/center-end;
+    padding: 5rem 0;
+    color: $color-raisin-black;    
+    
+    &__box{
+        // background: red ;
+        display: grid;
+        grid-template-columns: repeat(6, minmax(fit-content, 1fr));
+        grid-template-rows: repeat(2, min-content);
+        column-gap: 1rem;
+        border: 1px solid rgba($color-celeste, .8);
+        border-radius: 7px;  
+        overflow: hidden;
+        
+        
+        
+    }
+    &__content{
+        grid-row: 1/2;
+        grid-column: 1/-1;
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
+    &__card{
+        flex: 1 0 200px ;
+        padding: 4rem 1rem;
+        flex-wrap: wrap;
+        border-right: 1px solid rgba($color-celeste, .3);
+        
+
+        
+        &__header{
+            // background-color: rgba($color-electric-indigo, .1);
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            flex-direction: column;
+            
+        }
+        
+        &__icon{
+            fill: rgba($color-tangerine, .8);
+            height: 3.5rem;
+            width: 3.5rem;
+            margin-bottom: 1rem;
+        }
+        &__title{
+            color: rgba($color-sonic-silver, .9);
+            font-weight: 600;
+            font-size: $font-med;
+            text-transform: uppercase;
+            text-align: center;
+            
+        }
+        
+        &__list{
+            list-style: none;
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 1rem;
+            // background-color: red ;
+            & li{
+                flex: 1 1 100%;
+                margin-top: .5rem 0;
+                font-family: $font-tertiary;
+                font-size: $font-small;
+                text-transform: capitalize;
+                font-weight: 300;
+                text-align: center;
+            
+
+            }
+
+        }
+
+    }
+
+
+
+    &__carousel{
+        // background: salmon;
+        grid-column: 1/-1;
+        grid-row: 2/3;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        position: relative;
+        
+        
+        &::before, &::after{
+            content: "";
+            height: 100%;
+            width: 100px;
+            position: absolute;
+            // background-color: red;
+            background: linear-gradient(to right,#ffffff 0%, rgba(255,255,255, .2) 100%);
+            z-index: 5;
+        }
+        &::before{
+            top: 0;
+            left: 0;
+        }
+        &::after{
+            top: 0;
+            right: 0;
+            transform: rotateZ(180deg);
+        }
+
+        .slider{
+            width: 100rem;
+            height: 100px;
+            background: white;
+            display: flex;
+        }
+        .slide{
+            height: 100px;
+            display: flex;
+            align-items: center;
+            animation: slide-me 30s linear infinite;
+            &__icon{
+                fill: rgba($color-celeste, .8);
+                height: 3rem;
+                width: 3rem;
+                margin-right: 6rem;
+                cursor: pointer;
+
+                &:hover {
+                    fill: rgba($color-tangerine, .7);
+
+
+                }
+            }
+        }
+
+    }
 }
+
+@keyframes slide-me{
+    0%{transform: translate(0,0);}
+    100%{transform: translate(-100%,0);}
+}
+
