--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
     justify-content: center;
     flex-direction: column;
     box-shadow: -7px 7px 1.5rem rgba(0, 0, 0, 0.7);
-    padding: 2rem 8%;
+    padding: 3rem 8% 1.5rem;
     width: 100%; }
   .footer__group {
     margin: .5rem 0; }
@@ -111,16 +111,15 @@ body {
     max-height: 12rem; }
   .footer__btn-form, .footer__btn-form:link, .footer__btn-form:active {
     background-color: transparent;
-    border: 1.5px solid rgba(157, 231, 228, 0.2);
+    border: 2px solid rgba(157, 231, 228, 0.2);
     transition: all .3s;
     color: #ECECEB; }
     .footer__btn-form:hover, .footer__btn-form:link:hover, .footer__btn-form:active:hover {
-      background-color: rgba(157, 231, 228, 0.3);
-      border: 1.5px solid rgba(157, 231, 228, 0.6);
+      background-color: rgba(157, 231, 228, 0.2);
+      border: 2px solid rgba(157, 231, 228, 0.6);
       transform: scale(1.1); }
     .footer__btn-form:active, .footer__btn-form:link:active, .footer__btn-form:active:active {
-      background: rgba(251, 54, 64, 0.7);
-      outline: none; }
+      background: rgba(251, 54, 64, 0.7); }
   .footer__social {
     background-color: #103F56;
     width: 100%;
@@ -144,6 +143,7 @@ body {
   .footer__copyright {
     font-size: 1.5rem;
     font-weight: 100;
+    text-transform: capitalize;
     text-align: center;
     color: #ECECEB; }
 
@@ -158,21 +158,75 @@ body {
   grid-column: full-start/full-end; }
 
 .projects {
-  background-color: #3C438D;
+  background-color: rgba(194, 194, 193, 0.3);
   grid-row: 4/5;
-  grid-column: full-start/full-end; }
+  grid-column: full-start/full-end;
+  padding: 10rem 10%; }
+  .projects__container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 10rem 5rem; }
+
+.card {
+  background-color: #FFFFFF;
+  perspective: 180rem;
+  -moz-perspective: 180rem;
+  position: relative;
+  height: 45rem; }
+  .card__side {
+    color: white;
+    font-size: 2rem;
+    height: inherit;
+    transition: all 1s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column; }
+    .card__side::after {
+      content: '';
+      position: absolute;
+      background: rgba(41, 40, 42, 0.5);
+      bottom: -30px;
+      left: 5%;
+      width: 90%;
+      height: 12px;
+      border-radius: 50%;
+      z-index: -1;
+      filter: blur(12px); }
+    .card__side--back {
+      transform: rotateY(180deg);
+      background-color: #F58B00; }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+  .card__image {
+    background-size: cover;
+    background-position: right;
+    height: 25rem; }
+    .card__image--1 {
+      background-image: url(../img/jpg/project.jpg); }
+  .card__title {
+    background-color: orange;
+    color: black;
+    align-self: center;
+    margin: auto 0; }
 
 .skills {
   grid-row: 5/6;
   grid-column: center-start/center-end;
-  padding: 5rem 0;
+  padding: 10rem 0;
   color: #29282A; }
   .skills__box {
     display: grid;
     grid-template-columns: repeat(6, minmax(fit-content, 1fr));
     grid-template-rows: repeat(2, min-content);
     column-gap: 1rem;
-    border: 1px solid rgba(157, 231, 228, 0.8);
+    border: 1.5px solid rgba(157, 231, 228, 0.6);
     border-radius: 7px;
     overflow: hidden; }
   .skills__content {
@@ -183,13 +237,15 @@ body {
   .skills__card {
     flex: 1 0 200px;
     padding: 4rem 1rem;
-    flex-wrap: wrap;
-    border-right: 1px solid rgba(157, 231, 228, 0.3); }
+    flex-wrap: wrap; }
+    .skills__card:not(:nth-last-child(1)) {
+      border-right: 1.5px solid rgba(157, 231, 228, 0.4); }
     .skills__card__header {
       display: flex;
+      justify-content: flex-start;
       align-items: center;
-      justify-content: left;
-      flex-direction: column; }
+      flex-direction: column;
+      min-height: 10rem; }
     .skills__card__icon {
       fill: rgba(245, 139, 0, 0.8);
       height: 3.5rem;
@@ -205,7 +261,7 @@ body {
       list-style: none;
       display: flex;
       flex-wrap: wrap;
-      margin-top: 1rem; }
+      margin-top: .5rem; }
       .skills__card__list li {
         flex: 1 1 100%;
         margin-top: .5rem 0;
@@ -225,9 +281,9 @@ body {
     .skills__carousel::before, .skills__carousel::after {
       content: "";
       height: 100%;
-      width: 100px;
+      width: 120px;
       position: absolute;
-      background: linear-gradient(to right, #ffffff 0%, rgba(255, 255, 255, 0.2) 100%);
+      background: linear-gradient(to right, #FFFFFF 0%, rgba(255, 255, 255, 0.1) 100%);
       z-index: 5; }
     .skills__carousel::before {
       top: 0;
@@ -238,14 +294,12 @@ body {
       transform: rotateZ(180deg); }
     .skills__carousel .slider {
       width: 100rem;
-      height: 100px;
       background: white;
       display: flex; }
     .skills__carousel .slide {
       height: 100px;
       display: flex;
-      align-items: center;
-      animation: slide-me 30s linear infinite; }
+      align-items: center; }
       .skills__carousel .slide__icon {
         fill: rgba(157, 231, 228, 0.8);
         height: 3rem;
