--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,8 +1,89 @@
 .projects{
-    background-color: $color-dark-slate-blue;
+    background-color: rgba($color-silver, .3);
     grid-row: 4/5;
     grid-column: full-start/full-end;    
-    // height: 10rem;
+    padding: 10rem 10%;
+    
+    &__container{
+        // height: 60vh;
+        // background: grey;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+        gap: 10rem 5rem;        
+    }
+    
+}
 
+.card{
+    background-color: $color-white;
+    perspective: 180rem;
+    -moz-perspective: 180rem;
+    position: relative;
+    height: 45rem;
+    
+    
+    &__side{
+        color: white;
+        font-size: 2rem;
+        
+        height: inherit;
+        transition: all 1s ease-in-out;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;    
+        backface-visibility: hidden;
+        border-radius: 7px;
 
+        display: flex;
+        flex-direction: column;
+        
+        &::after{
+            content: '';
+            position: absolute;
+            background: rgba($color-raisin-black, .5);
+            bottom: -30px;
+            left: 5%;
+            width: 90%;
+            height: 12px;
+            border-radius: 50%;
+            z-index: -1;
+            filter: blur(12px);
+        }
+
+        &--front{
+            // background-color: $color-tangerine ;            
+        }
+        
+        &--back{
+            transform: rotateY(180deg);
+            background-color: $color-tangerine ;
+            
+        }
+    }
+
+    &:hover &__side--front{
+        transform: rotateY(-180deg);
+    }
+
+    &:hover &__side--back{
+        transform: rotateY(0);
+    }
+
+    &__image{
+        background-size: cover;
+        background-position: right;
+        
+        height: 25rem;
+        &--1{
+            background-image: url(../img/jpg/project.jpg);
+        }
+    }
+    
+    &__title{
+        background-color: orange;
+        color: black;
+        align-self: center;
+        margin: auto 0;
+    }
 }
